--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,15 +27,25 @@ Project File Date:  12/23/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling interrupt.c...
+compiling ble_app.c...
 compiling main.c...
-User\src\main.c(90): warning:  #223-D: function "NorFlash_IPCommand_Test" declared implicitly
-      NorFlash_IPCommand_Test();
-User\src\main.c: 1 warning, 0 errors
+compiling adc_app.c...
+compiling battery_app.c...
+compiling norflash_test.c...
+compiling ble_protocol.c...
+compiling led_app.c...
+compiling lpuart1.c...
+compiling adc_drv.c...
+compiling rtc_drv.c...
+compiling battery_drv.c...
+compiling iic_temp_drv.c...
+compiling norflash_drv.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=44984 RO-data=5476 RW-data=740 ZI-data=25928  
+Program Size: Code=40296 RO-data=5116 RW-data=708 ZI-data=17236  
 Finished: 0 information, 1 warning and 0 error messages.
-".\Objects\rt1052.axf" - 0 Error(s), 2 Warning(s).
+".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -114,12 +124,12 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
-      Include file:  fsl_device_registers.h
-      Source file:   system_MIMXRT1052.c
-      Include file:  MIMXRT1052.h
-      Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
+      Source file:   system_MIMXRT1052.c
+      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  MIMXRT1052.h
+      Include file:  fsl_device_registers.h
+      Include file:  system_MIMXRT1052.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
@@ -130,27 +140,27 @@ Package Vendor: NXP
       Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
-      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
+      Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\str\fsl_str.h
-      Include file:  utilities\debug_console\fsl_debug_console.h
       Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Source file:   drivers\fsl_xbara.c
       Include file:  drivers\fsl_xbara.h
+      Source file:   drivers\fsl_xbara.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
       Source file:   drivers\fsl_snvs_hp.c
@@ -161,20 +171,20 @@ Package Vendor: NXP
       Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Include file:  components\uart\uart.h
       Source file:   components\uart\lpuart_adapter.c
+      Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Source file:   drivers\fsl_lpuart.c
@@ -185,8 +195,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Include file:  components\lists\generic_list.h
       Source file:   components\lists\generic_list.c
+      Include file:  components\lists\generic_list.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -196,28 +206,28 @@ Package Vendor: NXP
       Source file:   drivers\fsl_lpi2c.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Include file:  drivers\fsl_gpt.h
       Source file:   drivers\fsl_gpt.c
+      Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
       Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:flexio:2.0.2
-      Include file:  drivers\fsl_flexio.h
       Source file:   drivers\fsl_flexio.c
+      Include file:  drivers\fsl_flexio.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Include file:  drivers\fsl_common.h
       Source file:   drivers\fsl_common.c
+      Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Include file:  drivers\fsl_clock.h
@@ -228,56 +238,56 @@ Package Vendor: NXP
       Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Include file:  Source\include\timers.h
       Source file:   Source\timers.c
+      Include file:  Source\include\timers.h
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Include file:  Source\include\stream_buffer.h
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Include file:  Source\include\event_groups.h
       Source file:   Source\event_groups.c
+      Include file:  Source\include\event_groups.h
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
       Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\queue.h
-      Source file:   Source\queue.c
-      Include file:  Source\include\task.h
-      Source file:   Source\list.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Include file:  Source\include\semphr.h
+      Include file:  Source\include\task.h
+      Source file:   Source\queue.c
+      Source file:   Source\list.c
+      Include file:  Source\include\queue.h
       Source file:   Source\tasks.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:10
 </pre>
 </body>
 </html>
