--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\project\rt1052.uvprojx
-Project File Date:  12/25/2019
+Project File Date:  12/26/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling fsl_mmc.c...
+compiling main.c...
 linking...
-Program Size: Code=76896 RO-data=6368 RW-data=792 ZI-data=24248  
+Program Size: Code=81748 RO-data=7308 RW-data=792 ZI-data=24760  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -67,6 +67,8 @@ Package Vendor: NXP
    * Component: debug_console Version: 1.0.0
    * Component: assert Version: 1.0.0
    * Component: xbara Version: 2.0.4
+   * Component: src Version: 2.0.1
+   * Component: snvs_lp Version: 2.1.0
    * Component: snvs_hp Version: 2.1.2
    * Component: sdhc Version: 2.2.8
    * Component: qtmr Version: 2.0.0
@@ -83,6 +85,7 @@ Package Vendor: NXP
    * Component: flexspi Version: 2.1.1
    * Component: edma Version: 2.1.8
    * Component: dmamux Version: 2.0.2
+   * Component: dcdc_1 Version: 2.0.0
    * Component: common Version: 2.1.0
    * Component: clock Version: 2.1.0
    * Component: adc_etc Version: 2.0.1
@@ -110,10 +113,10 @@ Package Vendor: NXP
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
       Source file:   arm\startup_MIMXRT1052.s
-      Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
-      Include file:  fsl_device_registers.h
       Include file:  system_MIMXRT1052.h
+      Include file:  MIMXRT1052.h
+      Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
@@ -125,20 +128,20 @@ Package Vendor: NXP
       Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_port_internal.h
       Include file:  components\serial_manager\serial_manager.h
-      Source file:   components\serial_manager\serial_manager.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
+      Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\str\fsl_str.h
-      Source file:   utilities\debug_console\fsl_debug_console.c
+      Source file:   utilities\str\fsl_str.c
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
@@ -147,21 +150,29 @@ Package Vendor: NXP
       Source file:   drivers\fsl_xbara.c
       Include file:  drivers\fsl_xbara.h
 
+   * Component: NXP::Device:SDK Drivers:src:2.0.1
+      Include file:  drivers\fsl_src.h
+      Source file:   drivers\fsl_src.c
+
+   * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
+      Include file:  drivers\fsl_snvs_lp.h
+      Source file:   drivers\fsl_snvs_lp.c
+
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
       Source file:   drivers\fsl_usdhc.c
       Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
       Include file:  drivers\fsl_lpuart_edma.h
@@ -176,12 +187,12 @@ Package Vendor: NXP
       Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -210,13 +221,17 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
 
+   * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
+      Source file:   drivers\fsl_dcdc.c
+      Include file:  drivers\fsl_dcdc.h
+
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
+      Source file:   drivers\fsl_clock.c
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Include file:  drivers\fsl_adc_etc.h
@@ -227,9 +242,9 @@ Package Vendor: NXP
       Include file:  drivers\fsl_adc.h
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
@@ -242,29 +257,29 @@ Package Vendor: NXP
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\message_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Include file:  Source\include\event_groups.h
       Source file:   Source\event_groups.c
+      Include file:  Source\include\event_groups.h
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
-      Include file:  Source\include\queue.h
       Include file:  Source\include\semphr.h
+      Source file:   Source\queue.c
       Include file:  Source\include\task.h
       Source file:   Source\list.c
-      Source file:   Source\queue.c
-      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\tasks.c
+      Include file:  Source\include\queue.h
+      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
@@ -272,7 +287,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:12
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
