--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,14 +22,15 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\project\rt1052.uvprojx
-Project File Date:  12/26/2019
+Project File Date:  12/27/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling peripherals.c...
+compiling ble_app.c...
+compiling adc_app.c...
 linking...
-Program Size: Code=85428 RO-data=7308 RW-data=804 ZI-data=24948  
+Program Size: Code=85316 RO-data=7308 RW-data=1288 ZI-data=25020  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -112,12 +113,12 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  fsl_device_registers.h
-      Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052.h
-      Include file:  MIMXRT1052_features.h
-      Include file:  system_MIMXRT1052.h
       Source file:   arm\startup_MIMXRT1052.s
+      Source file:   system_MIMXRT1052.c
+      Include file:  fsl_device_registers.h
+      Include file:  system_MIMXRT1052.h
+      Include file:  MIMXRT1052_features.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
@@ -128,20 +129,20 @@ Package Vendor: NXP
       Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Include file:  components\serial_manager\serial_port_internal.h
       Include file:  components\serial_manager\serial_manager.h
       Source file:   components\serial_manager\serial_manager.c
-      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\str\fsl_str.h
       Source file:   utilities\debug_console\fsl_debug_console.c
+      Include file:  utilities\str\fsl_str.h
       Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
@@ -175,16 +176,16 @@ Package Vendor: NXP
       Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Source file:   drivers\fsl_lpuart_edma.c
       Include file:  drivers\fsl_lpuart_edma.h
+      Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
+      Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
       Include file:  drivers\fsl_lpspi.h
@@ -206,12 +207,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Include file:  drivers\fsl_gpio.h
       Source file:   drivers\fsl_gpio.c
+      Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
-      Include file:  drivers\fsl_flexspi.h
       Source file:   drivers\fsl_flexspi.c
+      Include file:  drivers\fsl_flexspi.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
@@ -222,20 +223,20 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
-      Include file:  drivers\fsl_dcdc.h
       Source file:   drivers\fsl_dcdc.c
+      Include file:  drivers\fsl_dcdc.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Include file:  drivers\fsl_common.h
       Source file:   drivers\fsl_common.c
+      Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
+      Source file:   drivers\fsl_clock.c
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
-      Source file:   drivers\fsl_adc_etc.c
       Include file:  drivers\fsl_adc_etc.h
+      Source file:   drivers\fsl_adc_etc.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Source file:   drivers\fsl_adc.c
@@ -243,22 +244,22 @@ Package Vendor: NXP
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\stream_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
@@ -272,15 +273,15 @@ Package Vendor: NXP
       Include file:  Source\include\croutine.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Source file:   Source\list.c
-      Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\semphr.h
-      Source file:   Source\tasks.c
-      Include file:  Source\include\task.h
-      Source file:   Source\queue.c
-      Include file:  Source\include\queue.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
+      Source file:   Source\queue.c
+      Include file:  Source\include\semphr.h
+      Source file:   Source\tasks.c
+      Include file:  Source\include\FreeRTOS.h
+      Include file:  Source\include\queue.h
+      Source file:   Source\list.c
+      Include file:  Source\include\task.h
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
