--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,10 +27,23 @@ Project File Date:  12/27/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling ble_app.c...
+compiling interrupt.c...
+compiling main.c...
 compiling adc_app.c...
+compiling ble_app.c...
+compiling battery_app.c...
+compiling norflash_test.c...
+compiling ble_protocol.c...
+compiling led_app.c...
+compiling battery_drv.c...
+compiling rtc_drv.c...
+compiling adc_drv.c...
+compiling emmc_drv.c...
+compiling iic_temp_drv.c...
+compiling utility.c...
+compiling norflash_drv.c...
 linking...
-Program Size: Code=85316 RO-data=7308 RW-data=1288 ZI-data=25020  
+Program Size: Code=85440 RO-data=7312 RW-data=1284 ZI-data=25020  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -113,20 +126,20 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  MIMXRT1052.h
       Source file:   arm\startup_MIMXRT1052.s
-      Source file:   system_MIMXRT1052.c
+      Include file:  MIMXRT1052_features.h
+      Include file:  MIMXRT1052.h
       Include file:  fsl_device_registers.h
       Include file:  system_MIMXRT1052.h
-      Include file:  MIMXRT1052_features.h
+      Source file:   system_MIMXRT1052.c
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
       Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Source file:   components\serial_manager\serial_port_uart.c
       Include file:  components\serial_manager\serial_port_uart.h
+      Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_port_internal.h
@@ -138,26 +151,26 @@ Package Vendor: NXP
       Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\str\fsl_str.h
       Include file:  utilities\debug_console\fsl_debug_console.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\debug_console\fsl_debug_console.c
+      Source file:   utilities\str\fsl_str.c
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Include file:  drivers\fsl_xbara.h
       Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Include file:  drivers\fsl_src.h
       Source file:   drivers\fsl_src.c
+      Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
-      Source file:   drivers\fsl_snvs_lp.c
       Include file:  drivers\fsl_snvs_lp.h
+      Source file:   drivers\fsl_snvs_lp.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
       Source file:   drivers\fsl_snvs_hp.c
@@ -168,43 +181,43 @@ Package Vendor: NXP
       Source file:   drivers\fsl_usdhc.c
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
       Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
+      Source file:   components\uart\lpuart_adapter.c
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Include file:  drivers\fsl_lpuart.h
       Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Include file:  components\lists\generic_list.h
       Source file:   components\lists\generic_list.c
+      Include file:  components\lists\generic_list.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
+      Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
       Source file:   drivers\fsl_gpio.c
@@ -223,43 +236,43 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
-      Source file:   drivers\fsl_dcdc.c
       Include file:  drivers\fsl_dcdc.h
+      Source file:   drivers\fsl_dcdc.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Include file:  drivers\fsl_adc_etc.h
       Source file:   drivers\fsl_adc_etc.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Source file:   drivers\fsl_adc.c
       Include file:  drivers\fsl_adc.h
+      Source file:   drivers\fsl_adc.c
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Include file:  Source\include\timers.h
       Source file:   Source\timers.c
+      Include file:  Source\include\timers.h
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
-      Include file:  Source\include\stream_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\stream_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\message_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
@@ -269,26 +282,26 @@ Package Vendor: NXP
       Include file:  Source\include\event_groups.h
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
       Source file:   Source\queue.c
       Include file:  Source\include\semphr.h
       Source file:   Source\tasks.c
       Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\queue.h
-      Source file:   Source\list.c
       Include file:  Source\include\task.h
+      Source file:   Source\list.c
+      Include file:  Source\include\queue.h
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:22
 </pre>
 </body>
 </html>
